8.9
Fix https://github.com/tonikelope/megabasterd/issues/599